--- a/index.html
+++ b/index.html
@@ -49,5 +49,6 @@
     </div>
 
     <script src="index.js"></script>
+    <script src="https://pagecdn.io/lib/mathjs/9.4.4/math.min.js"></script>
   </body>
 </html>
